# cad_module

./: .gitignore  CMakeLists.txt  README.md
include/geometric/: geom.hpp
include/numeric/: newton.hpp
src/: point_line_projection.cpp
tests/: test_newton.cpp
